   the "X-Request-Base" header
 - Fix jumping to the right position in chat history #453
 - Fix edge cases for ?after= and ?before= #459
 - Fix being able to make a paste with unicode #460
 - Fix select-field styling on "Add conversation" page
 - Fix "substr outside of string at Mojo/Asset/Memory.pm line 45." warning
 - Fix rendering <Fallback/> pages
 - Fix loading PWA assets in <head>
 - Replaced Convos icon with "info-circle" icon in chat
 - Avoid inactivity_timeout from /api/embed.json
 - Avoid including the short timestamp when doing copy of chat dialog
 - Will persist theme settings in a cookie to prevent flashing between themes
  on load

4.03 2020-04-07T11:32:00+0800
 - Fix parsing routes such as /chat/irc-convos/%23x%2Fbar
 - Fix rendering of /file/1/lNqUVc43p0h4jaj5 paths

4.02 2020-04-06T22:10:00+0800
 - Fix not being able to subscribe to store
 - Fix not showing the nav menu by default on small screens
 - Made the chat input look more like an input

4.01 2020-04-06T21:39:00+0800
 - Add Nordaaker as background image to login screen #439
 - Add support for searching for anything from main search input #457
 - Fix rendering convos images on small screen #450
 - Fix not allowing injected "#call:" and "#send:" links
 - Fix not looping through all dialogs and marking them as read on reconnect
 - Fix not showing "date changed" in <Search/> before search is performed
 - Fix not asking for protocol handling all the time in Firefox
 - Extended the webmanifest
 - Changed to pagejs for routing on client side
 - Replaced "settings" in svelte context with process.env

4.00 2020-03-24T16:00:00+0900
 - Add custom styling for image previews from Convos #450
 - Add checkbox for "forced_connection" in "settings" #456
 - Add search to frontend #187
 - Made the theming support more flexible #394
 - Fix not sending /query before sending a list of channels to the server #442
 - Fix issue in firefox where padding-bottom is ignored