@@ -15,11 +15,12 @@ Revision history for perl distribution Convos
  - Fix "substr outside of string at Mojo/Asset/Memory.pm line 45." warning
  - Fix rendering <Fallback/> pages
  - Fix loading PWA assets in <head>
+ - Removed support for fetching "user.json" with notifications.
  - Replaced Convos icon with "info-circle" icon in chat
  - Avoid inactivity_timeout from /api/embed.json
  - Avoid including the short timestamp when doing copy of chat dialog
  - Will persist theme settings in a cookie to prevent flashing between themes
-  on load
+   on load
 
 4.03 2020-04-07T11:32:00+0800
  - Fix parsing routes such as /chat/irc-convos/%23x%2Fbar
